Fixes for price service

--- a/kymaexternalservicesbackoffice/resources/kymaexternalservicesbackoffice-backoffice-labels/labels_en.properties
+++ b/kymaexternalservicesbackoffice/resources/kymaexternalservicesbackoffice-backoffice-labels/labels_en.properties
@@ -19,3 +19,4 @@ dummy=dummy
 hmc.externalservices=External Services
 hmc.section.basestore.externalpricingservice=External Pricing Service
 hmc.section.basestore.externaldeliverycostsservice=External Delivery Costs Service
+hmc.section.basestore.externalstockservice=External Stock Service
